Refactor: codebase cleanup and architectural improvements (#13)
* refactor: remove unnecessary @Autowired annotations from multiple classes

* refactor: reorganize auth code structure and improve method implementations

* refactor: enhance security token handling and improve password reset logic

* refactor: improve OAuth provider handling and streamline user email management

* refactor: simplify OAuth provider service usage and enhance access token management with Jira service

* refactor: update JiraService to improve user task fetching and enhance preferred settings handling

* refactor: improve work log evaluation logic & re-implementation for worklog search

* refactor: update work log handling to use minutes instead of hours and enhance search filter validation

* refactor: update work log search filter to use total hours and enhance validation schema

* refactor: reimplement email management to enhance user email handling and verification flow

* refactor: update total hours display to use total time in WorklogInfo component

* refactor: update email handling in AuthService and enhance UserEmail entity

* fix: remove user service dependency in oauth provider service

* fix: handle oauth provider email change case

* fix: enhance email management with improved verification and handling of pending emails

* refactor:  removing unnecessary props from password section and reimplementation for email section

* fix: ensure security token deletion after email verification in UserService

* refactor: rename TrackeraHasher to CryptoUtil and update related references; improve email handling in AuthService and UserService

* refactor: update API endpoints for OAuth and email management; enhance email handling in AuthService and UserService

* refactor: update API endpoints for password and email management; streamline user data handling in related components

* refactor: extract API scanning logic into ApiScanner; improve error handling and logging in ApiConfig

* refa